--- a/templates/home.html
+++ b/templates/home.html
@@ -9,32 +9,30 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-    
+                <!-- <img src="{{ url_for('video_feed') }}" height="80%"> -->
                 
-                <h2 class="mt-5">CAMERA APP by Hemanth Nag</h2>
+                <h2 class="mt-5">Add Student to DB</h2>
                 <form method="post" action="{{ url_for('tasks') }}">
-                <!-- <input type="submit" value="Stop/Start" name="stop" /> -->
-                <input type="button" value="Add Student" name="Add"/>
-
+               
                 <input type="text" name="name"/>
                 <input type="text" name="roll_no"/>
                 <input type="submit" value="Next" name="click"/>
-                <input type="button" value="Get Attendance" name="Attendance"/>
-                <!-- <input type="submit" value="Grey" name="grey" /> -->
-                <!-- <input type="submit" value="Negative" name="neg" /> -->
-                <!-- <input type="submit" value="Face Only" name="face" /> -->
-                <!-- <input type="submit" value="Start/Stop Recording" name="rec" /> -->
+               
                 </form>
-                <img src="{{ url_for('video_feed') }}" height="80%">
-                <h3 style="font-family:courier;">Instructions:</h3>
+                
+                <!-- <h3 style="font-family:courier;">Instructions:</h3>
                 <ol style="font-family:courier;">
                 <li>Stop/Start--Toggle between stop or start live streaming</li>
                 <li>Capture--Take still-shot and save in the 'shots' directory</li>
                 <li>Grey--Toggle between grayscale and RGB output</li>
                 <li>Negative--Toggle between negative and RGB output</li>
                 <li>Face Only--Shows just your face if present(Toggle on/off)</li> 
-                <li>Start/Stop Recording--Toggle between starting and stopping video recording</li>	
-                
+                <li>Start/Stop Recording--Toggle between starting and stopping video recording</li>	 -->
+                 <!-- <input type="submit" value="Stop/Start" name="stop" /> -->
+                 <!-- <input type="submit" value="Grey" name="grey" /> -->
+                <!-- <input type="submit" value="Negative" name="neg" /> -->
+                <!-- <input type="submit" value="Face Only" name="face" /> -->
+                <!-- <input type="submit" value="Start/Stop Recording" name="rec" /> -->
             </div>
         </div>
     </div>
