--- a/templates/index.html
+++ b/templates/index.html
@@ -13,35 +13,20 @@
     
                 
                 <h2 class="mt-5">Smart Attendance using face recognition</h2>
-                <form method="post" action="{{ url_for('tasks') }}">
-                <!-- <input type="submit" value="Stop/Start" name="stop" /> -->
-                <input type="button" value="Add Student" name="Add"/>
 
 
-                <h2 class="mt-5">Smart Attendance System</h2>
                 <form method="post" action="{{ url_for('tasks') }}">
                     <!-- <input type="submit" value="Stop/Start" name="stop" /> -->
                     <input type="button" value="Add Student" name="Add" />
-
-                    <input type="text" name="name" />
-                    <input type="text" name="roll_no" />
-                    <input type="submit" value="Next" name="click" />
-                    <input type="button" value="Get Attendance" name="Attendance" />
+                </form>
+                <form method="post" action="{{ url_for('mark_attendance') }}">
+                    <input type="button" value="Mark Attendance" name="attendance" />
                     <!-- <input type="submit" value="Grey" name="grey" /> -->
                     <!-- <input type="submit" value="Negative" name="neg" /> -->
                     <!-- <input type="submit" value="Face Only" name="face" /> -->
                     <!-- <input type="submit" value="Start/Stop Recording" name="rec" /> -->
                 </form>
-                <img src="{{ url_for('video_feed') }}" height="80%">
                 <h3 style="font-family:courier;">Instructions:</h3>
-                <ol style="font-family:courier;">
-                    <li>Stop/Start--Toggle between stop or start live streaming</li>
-                    <li>Capture--Take still-shot and save in the 'shots' directory</li>
-                    <li>Grey--Toggle between grayscale and RGB output</li>
-                    <li>Negative--Toggle between negative and RGB output</li>
-                    <li>Face Only--Shows just your face if present(Toggle on/off)</li>
-                    <li>Start/Stop Recording--Toggle between starting and stopping video recording</li>
-
             </div>
         </div>
     </div>
