--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,47 @@
-<div class="jumbotron" style="background-color:#F0F8FF;">
-	<h1 style="font-variant: small-caps;">Login</h1>
-	<form action="" method="POST">
-		<div class="form-group">
-			<label style="font-size: 20px;" class="font-italic">Username</label>
-			<input type="text" name="username" class = "form-control" value="{{request.form.username}}">
-		</div>
-		<div class="form-group">
-			<label style="font-size: 20px;" class="font-italic">Password</label>
-			<input type="password" name="password" class = "form-control" value="{{request.form.password}}">
-		</div>
-		<button type="submit" class="btn btn-primary">Login</button>
-	</form> 
-    {% if error %}
-    <h1>{{error}}</h1>
-    {% endif %}
+<!doctype html>
+<html lang="en">
+
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="static/css/base.css">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+
+	<title>Login</title>
+</head>
+
+<body>
+
+	<h1 style="text-align:center">Smart Attendance</h1>
+	<div class="container" style="background-color:#F0F8FF;">
+		<h1 style="font-variant: small-caps;">Login</h1>
+		<form action="" method="POST">
+			<div class="form-group">
+				<label style="font-size: 20px;" class="font-italic">Username</label>
+				<input type="text" name="username" class="form-control" value="{{request.form.username}}">
+			</div>
+			<div class="form-group">
+				<label style="font-size: 20px;" class="font-italic">Password</label>
+				<input type="password" name="password" class="form-control" value="{{request.form.password}}">
+			</div>
+			<br>
+			<button type="submit" class="btn btn-primary">Login</button>
+		</form>
+		{% if error %}
+		<h1>{{error}}</h1>
+		{% endif %}
 	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+		integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+		integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+		crossorigin="anonymous"></script>
+</body>
+
+</html>
