--- a/templates/base.html
+++ b/templates/base.html
@@ -22,11 +22,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-outline-success" type="submit">Logout</button>
+                    <a href="{{ url_for('start') }}"><button class="btn btn-outline-success" type="submit">Logout</button></a>
                 </form>
             </div>
         </div>
