--- a/templates/login.html
+++ b/templates/login.html
@@ -31,9 +31,19 @@
 			<br>
 			<button type="submit" class="btn btn-primary">Login</button>
 		</form>
-		{% if error %}
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<script>
+				var messages = {{ messages | safe }};
+				for (var i=0; i<messages.length; i++) {
+					alert(messages[i]);
+				}
+				</script>
+			{% endif %}
+		{% endwith %}
+		<!-- {% if error %}
 		<h1>{{error}}</h1>
-		{% endif %}
+		{% endif %} -->
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
