login is now working

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                 <img class="card-img-top" src="static/images/register.webp" alt="Card image cap">
                 <div class="card-body">
                     <form action="{{ url_for('tasks') }}" method="POST">
-                        <button type="submit" class="btn btn-primary">Add Student</button>
+                        <button type="submit" class="btn btn-outline-primary">Add Student</button>
                     </form>
                 </div>
             </div>
@@ -16,7 +16,7 @@
                 <img class="card-img-top" src="static/images/mark.jpg" alt="Card image cap">
                 <div class="card-body">
                     <form action="{{ url_for('mark_attendance') }}" method="POST">
-                        <button type="submit" class="btn btn-primary">Mark Attendance</button>
+                        <button type="submit" class="btn btn-outline-primary">Mark Attendance</button>
                     </form>
 
                     <!-- <input type="submit" value="Grey" name="grey" /> -->
