--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %} Take Attendance {% endblock %}
 {% block content %}
+    <h1>Please wait Attendance is being marked..</h1>
+    <div class="image-container">
+        <img src="{{ url_for('video_feed_for_attendance') }}">
+    </div>
 
 {% endblock %}
