--- a/templates/create__student_db.html
+++ b/templates/create__student_db.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8  offset-lg-2">
-            <!-- <img src="{{ url_for('video_feed') }}" height="80%"> -->
+            
 
             <h2 class="mt-5">Add Student to DB</h2>
             <form method="post" action="{{ url_for('add_student_details') }}">
@@ -26,6 +26,11 @@
 				</script>
 			{% endif %}
 		{% endwith %}
+        <h1>Instructions:</h1>
+        <h1>Please put ur face in centre, single face has to be there, then click next</h1>
+        </div>
+        <div class="image-container">
+            <img src="{{ url_for('video_feed_for_dbcreation') }}">
         </div>
     </div>
 </div>
