--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,6 @@
             <a class="navbar-brand logo" href="#">
                 <h4>Smart Attendance System</h4>
             </a>
-            <a class="navbar-brand" href="#">SAS</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -33,12 +32,12 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a href="{{ url_for('start') }}"><button class="btn btn-outline-success" type="submit">Logout</button></a>
+                    <a href="{{ url_for('start') }}"><button class="btn btn-outline-success"
+                            type="submit">Logout</button></a>
                 </form>
             </div>
         </div>
     </nav>
-    <h1 style="text-align:center">Smart Attendance</h1>
     {% block content %} {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
