--- a/templates/index.html
+++ b/templates/index.html
@@ -5,33 +5,39 @@
     <div class="col-lg-8  offset-lg-2">
         <div class="card-group">
             <div class="card">
-                <img class="card-img-top" src="static/images/register.webp" alt="Card image cap">
+                <img class="card-img-top" src="static\images\Add student.jpg" alt="Card image cap">
                 <div class="card-body">
-                   <a href="{{ url_for('add_student') }}"><input type="submit" name="Add Student" value="student"></a>
+                    <a href="{{ url_for('add_student') }}">
+                        <button type="submit" name="Add Student" value="Add student" class="btn btn-outline-primary">
+                            Add Student</button>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="static/images/mark.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <a href="{{ url_for('mark_attendance') }}"><input type="submit" name="Mark Attendance" value="attendance"></a>
+                <img class="card-img-top " src="static/images/attendance-mark.png" alt="Card image cap">
 
-                    <!-- <input type="submit" value="Grey" name="grey" /> -->
-                    <!-- <input type="submit" value="Negative" name="neg" /> -->
-                    <!-- <input type="submit" value="Face Only" name="face" /> -->
-                    <!-- <input type="submit" value="Start/Stop Recording" name="rec" /> -->
+                <div class="card-body">
+                    <a href="{{ url_for('mark_attendance') }}">
+                        <button type="submit" name="Mark Attendance" value="Mark Attendance"
+                            class="btn btn-outline-primary"> Mark Attendance</button>
+
+
+                        <!-- <input type="submit" value="Grey" name="grey" /> -->
+                        <!-- <input type="submit" value="Negative" name="neg" /> -->
+                        <!-- <input type="submit" value="Face Only" name="face" /> -->
+                        <!-- <input type="submit" value="Start/Stop Recording" name="rec" /> -->
                 </div>
             </div>
         </div><!-- <h3 style="font-family:courier;">Instructions:</h3> -->
     </div>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <script>
+    <script>
         var messages = {{ messages | safe }};
-        for (var i=0; i<messages.length; i++) {
+        for (var i = 0; i < messages.length; i++) {
             alert(messages[i]);
         }
-        </script>
+    </script>
     {% endif %}
-{% endwith %}
+    {% endwith %}
 </div>
 {% endblock %}
