--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,10 +6,9 @@
   height: auto;
 }
 
-.fontAlata {
-  font-family: 'Alata', sans-serif;
+.fontforall {
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
-
 
 .Img_size {
   height: 700px;
