--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
@@ -22,20 +26,13 @@
 <body>
     <nav class="navbar sticky-top navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand logo" href="#">
-                <h4>Smart Attendance System</h4>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <a href="{{ url_for('start') }}"><button class="btn btn-outline-success"
+            <nav class="navbar navbar-light bg-light justify-content-between">
+                <a class="navbar-brand logo">Smart Attendance System</a>
+                <form class="form-inline">
+                    <a href="{{ url_for('start') }}"><button class="btn btn-outline-success my-2 my-sm-0"
                             type="submit">Logout</button></a>
                 </form>
-            </div>
+            </nav>
         </div>
     </nav>
     {% block content %} {% endblock %}
