--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Index Page {% endblock %}
 {% block content %}
-<div class="container">
+<div class="container bg-light">
     <div class="col-lg-8  offset-lg-2">
         <div class="card-group">
             <div class="card">
