--- a/templates/create__student_db.html
+++ b/templates/create__student_db.html
@@ -5,14 +5,12 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-8  offset-lg-2">
-
-
+        <div>
             <h2 class="mt-5 fontforall">Add Student to DB</h2>
             <form method="post" action="{{ url_for('add_student_details') }}">
                 <form>
                     <div class="row">
-                        <div class="col mt-3">
+                        <div class="col mt-3 pb-3">
                             <input type="text" class="form-control" name="name" placeholder="Enter your Name">
                         </div>
                         <div class="col mt-3">
@@ -43,7 +41,18 @@
         </script>
         {% endif %}
         {% endwith %}
+        <h2 class="fontforall">Instructions:</h2>
+        <ul>
+            <li class="fontforall">Center your face while looking at camera</li>
+            <li class="fontforall"> Make sure you are siting in a bright lit place</li>
+            <li class="fontforall">Wait for the camera to register your face</li>
+        </ul>
+
     </div>
+    <div class="image-container">
+        <img src="{{ url_for('video_feed_for_dbcreation') }}">
+    </div>
+</div>
 </div>
 </div>
 {% endblock %}
