--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
+
 <body>
 	<nav class="navbar sticky-top navbar-light bg-light">
 		<div class="container-fluid">
@@ -32,51 +36,49 @@
 		<!-- used this for aligining image and form side by side -->
 		<div class="bg-light d-flex justify-content-between">
 			<div class="col">
-				<img class="float-left Img_size"
-					src="static/images/loginPic.jpg"
-					alt="image">
+				<img class="float-left Img_size" src="static/images/loginPic.jpg" alt="image">
 			</div>
 			<div class="col">
 				<form action="" method="POST">
-					<div class="d-flex align-items-center mb-3 pb-1">
-						<span class="h3 fw-bold mb-1">Login</span>
-					</div>
-					<h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+					<h5 class="fw-normal mb-4 pb-3 fontforall" style="letter-spacing: 1px;">Sign into your
+						account
+					</h5>
 					<div class="form-outline mb-4">
-						<label class="form-label">College Name</label>
+						<label class="form-label fontforall">College Name</label>
 						<input name="username" value="{{request.form.username}}" style="width:550px" type="text"
 							class="form-control" />
 					</div>
 					<div class="form-outline mb-4">
-						<label class="form-label">Password</label>
+						<label class="form-label fontforall">Password</label>
 						<input name="password" value="{{request.form.password}}" style="width: 550px;" type="password"
-							class="form-control"/>
+							class="form-control" />
 					</div>
 					<div>
-						<button type="submit" class="btn btn-secondary btn-lg btn-block" style="width:200px;"> 
+						<button type="submit" class="btn btn-secondary-btn-lg btn-block fontforall"
+							style="width:200px;">
 							Login
 						</button>
 					</div>
 				</form>
 			</div>
-		{% with messages = get_flashed_messages() %}
+			{% with messages = get_flashed_messages() %}
 			{% if messages %}
-				<script>
+			<script>
 				var messages = {{ messages | safe }};
-				for (var i=0; i<messages.length; i++) {
+				for (var i = 0; i < messages.length; i++) {
 					alert(messages[i]);
 				}
-				</script>
+			</script>
 			{% endif %}
-		{% endwith %}
-	</div>
+			{% endwith %}
+		</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-		integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
-		integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
-		crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+			integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+			crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+			integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+			crossorigin="anonymous"></script>
 </body>
 
 </html>
