--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,7 @@
 							class="form-control" />
 					</div>
 					<div>
-						<button type="submit" class="btn btn-secondary-btn-lg btn-block fontforall"
+						<button type="submit" class="btn btn-secondary btn-lg btn-block fontforall"
 							style="width:200px;">
 							Login
 						</button>
