--- a/templates/base.html
+++ b/templates/base.html
@@ -5,38 +5,29 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="static/css/base.css">
     <!-- Bootstrap CSS -->
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/base.css">
 
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
-    <nav class="navbar sticky-top navbar-light bg-light">
+<body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <nav class="navbar navbar-light bg-light justify-content-between">
-                <a class="navbar-brand logo">Smart Attendance System</a>
-                <form class="form-inline">
-                    <a href="{{ url_for('start') }}"><button class="btn btn-outline-success my-2 my-sm-0"
-                            type="submit">Logout</button></a>
-                </form>
-            </nav>
+            <a class="navbar-brand mx-auto logo" href="#">Smart Attendance System</a>
+            <form class="d-flex">
+                <a href="{{ url_for('start') }}">
+                    <button class="btn btn-outline-success my-2 my-sm-0 float-end" type="submit">Logout</button>
+                </a>
+            </form>
         </div>
     </nav>
     {% block content %} {% endblock %}
