--- a/templates/base.html
+++ b/templates/base.html
@@ -22,14 +22,11 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <nav class="navbar navbar-light bg-light justify-content-between">
-                <a class="navbar-brand logo">Smart Attendance System</a>
-                <a href="{{ url_for('index') }}"><button class="btn btn-outline-success my-2 my-sm-0"
-                    type="submit">Home</button></a>
+            <a class="navbar-brand mx-auto logo" href="{{ url_for('index') }}">Smart Attendance System</a>
+            <form class="d-flex">
                 <a href="{{ url_for('start') }}"><button class="btn btn-outline-success my-2 my-sm-0"
-                    type="submit">Logout</button></a>
-                
-            </nav>
+                        type="submit">Logout</button></a>
+            </form>
         </div>
     </nav>
     {% block content %} {% endblock %}
