made picture local

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid bg-light bg">
     <!-- Background image -->
-    <div class="bg-image" style="background-image: url('https://a-static.besthdwallpaper.com/school-classroom-wallpaper-1280x720-69041_45.jpg');
+    <div class="bg-image" style="background-image: url('static/images/classroom.jpg');
   height: 100vh;">
         <!-- Background image -->
         <div class="col-lg-8  offset-lg-2 pt-3">
