--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,4 +30,8 @@
 .image-container {
   height: 200;
   width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top:50px;
 }
