--- a/templates/create__student_db.html
+++ b/templates/create__student_db.html
@@ -48,9 +48,12 @@
         </ul>
 
     </div>
-    <div class="image-container">
-        <img src="{{ url_for('video_feed_for_dbcreation') }}">
+    <div class="container-fluid">
+        <div class="image-container-2">
+            <img src="{{ url_for('video_feed_for_dbcreation') }}">
+        </div>
     </div>
+    
 </div>
 </div>
 </div>
